Added twitter button

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -50,3 +50,12 @@
     }
   }
 }
+
+.btn-twtr {
+  background-color:#1da1f2;
+  a {
+    justify-content: center;
+    color: $white;
+    text-decoration: none;
+  }
+}
