--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,9 +1,11 @@
 footer.sticky-footer {
-  padding: 2rem 0;
   flex-shrink: 0;
   .copyright {
     line-height: 1;
     font-size: 0.8rem;
+  }
+  div {
+    padding: 0.5rem 0;
   }
 }
 
